feat(client-admin): server-side pagination
